--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "socket.io": "^2.1.1",
-    "nodemon": "^1.18.5"
+    "moment": "^2.22.2",
+    "nodemon": "^1.18.5",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "expect": "^1.20.2",
