--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "chat-app",
+  "name": "node-chat-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
+  },
+  "engines": {
+    "node": "6.2.2"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "moment": "^2.22.2",
-    "nodemon": "^1.18.5",
-    "socket.io": "^2.1.1"
+    "express": "^4.14.0",
+    "moment": "^2.24.0",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "expect": "^1.20.2",
-    "mocha": "^3.0.2"
+    "mocha": "^3.5.3",
+    "nodemon": "^1.18.9"
   }
 }
